src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Additional_Items_Reviewed__c</fullName>
        <label>Additional Items Reviewed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insurance Review</fullName>
                </value>
                <value>
                    <fullName>Financial Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConnectedIDName__c</fullName>
        <label>Caller ID Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectedID__c</fullName>
        <label>Caller ID</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Hyperlink__c</fullName>
        <formula>HYPERLINK ( Document_Link__c, Document_Link__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Hyperlink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <label>Document Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Expectations__c</fullName>
        <description>Notes about client&apos;s expectations</description>
        <label>Expectations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household associated with the task</description>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__NextSteps__c</fullName>
        <description>Notes about follow-up activities</description>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__Objectives__c</fullName>
        <description>Notes about client&apos;s objectives</description>
        <label>Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__Regarding__c</fullName>
        <description>Nature of interaction with the client</description>
        <label>Regarding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Client Retention</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hold_Recommendation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold Recommendation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_FMA_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in FMA Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_DOL_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in DOL Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Info_Reviewed__c</fullName>
        <label>Items Reviewed (Required for FMAs)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Client Info</fullName>
                </value>
                <value>
                    <fullName>Investment Objective &amp; Risk Tolerance</fullName>
                </value>
                <value>
                    <fullName>Time Horizon &amp; Liquidity Needs</fullName>
                </value>
                <value>
                    <fullName>Investments &amp; Performance</fullName>
                </value>
                <value>
                    <fullName>Concentrated Positions</fullName>
                </value>
                <value>
                    <fullName>High Cash Balance</fullName>
                </value>
                <value>
                    <fullName>Unsolicited Trading/Low Trading</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Owner_ID__c</fullName>
        <label>Legacy Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Recurrence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy Recurrence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_WhatId__c</fullName>
        <label>Legacy WhatId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_WhoId__c</fullName>
        <label>Legacy WhoId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Manager_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portfolio Manager Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rebuilt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rebuilt?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnxccm__CTIInfo__c</fullName>
        <description>Additional CTI Information</description>
        <label>CTI Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnxccm__UniqueCallId__c</fullName>
        <description>UniqueCallId</description>
        <externalId>true</externalId>
        <label>UniqueCallId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>